syntax = "proto3";

option go_package = "github.com/NeptuneG/go-back/services/user/proto";
package neptuneg.go_back.serivces.user;

import "google/api/annotations.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post : "/v1/users"
      body : "*"
    };
  };

  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get : "/v1/users/{id}"
    };
  };

  rpc IsUserExist(IsUserExistRequest) returns (IsUserExistResponse);
}

message User {
  string id = 1;
  string email = 2;
  int32 points = 3;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse { User user = 1; }

message GetUserRequest { string id = 1; }

message GetUserResponse { User user = 1; }

message IsUserExistRequest { string id = 1; }

message IsUserExistResponse { bool exist = 1; }
